--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "json-server": "^0.17.0",
     "serve-index": "^1.9.1"
   }
 }
